Small overflow fix

--- a/app/styles/tink/_interactive-table.scss
+++ b/app/styles/tink/_interactive-table.scss
@@ -151,6 +151,10 @@
   overflow: hidden;
   overflow-y: auto;
   user-select: none;
+
+  li {
+    overflow: hidden;
+  }
 }
 
 button i {
